# middler

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  API_SIGNUP.md  BUILD_LOG.md  CLAUDE.md  Dockerfile  README.md  betting-middling-detector-proposal.md  config.yaml  docker-compose.yml  pyproject.toml
deploy/: NAS.md  nas-deploy.sh  view-report.cmd
middler/: __init__.py  app.py  books.py  budget.py  config.py  healthcheck.py  logging_setup.py  models.py  timeutil.py
middler/alert/: __init__.py  deeplinks.py  telegram.py
middler/backcast/: __init__.py  replay.py  report.py
middler/detection/: __init__.py  engine.py  maths.py
middler/ingest/: __init__.py  feed.py  merge.py  normaliser.py  odds_api.py  oddsapi_io.py  oddspapi.py
middler/match/: __init__.py  entity.py
middler/place/: __init__.py  betfair.py
middler/schedule/: __init__.py  scheduler.py  state_machine.py
middler/store/: __init__.py  history.py  hot.py
middler/tools/: __init__.py  backup.py  calc.py  get_chat_id.py  seed_demo.py
tests/: test_alert.py  test_app.py  test_backcast.py  test_backup.py  test_budget.py  test_calc.py  test_engine.py  test_match.py  test_maths.py  test_merge.py  test_normaliser.py  test_oddsapi_io.py  test_oddspapi.py  test_placement.py  test_scheduler.py  test_stores.py
